--- a/pages/modules.html
+++ b/pages/modules.html
@@ -38,9 +38,6 @@
             <a class="nav-link" href="pricing.html" data-testid="link-nav-pricing">Pricing</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html" data-testid="link-nav-about">About</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="contact.html" data-testid="link-nav-contact">Contact</a>
           </li>
           <li class="nav-item">
@@ -122,38 +119,35 @@
         <p class="lead text-muted" data-testid="text-categories-subtitle">Filter modules by category to find exactly what you need</p>
       </div>
       
-      <ul class="nav nav-pills justify-content-center mb-5 module-category-tabs flex-wrap" id="categoryTabs" role="tablist">
-        <li class="nav-item" role="presentation">
-          <button class="nav-link active" id="all-tab" data-bs-toggle="pill" data-bs-target="#all" type="button" role="tab" data-testid="button-filter-all">
+      <ul class="nav nav-pills justify-content-center mb-5 module-category-tabs flex-wrap" id="categoryTabs">
+        <li class="nav-item">
+          <button class="nav-link active" id="all-tab" type="button" data-testid="button-filter-all">
             <i class="bi bi-grid-3x3-gap me-2"></i>All Modules
           </button>
         </li>
-        <li class="nav-item" role="presentation">
-          <button class="nav-link" id="academic-tab" data-bs-toggle="pill" data-bs-target="#academic" type="button" role="tab" data-testid="button-filter-academic">
+        <li class="nav-item">
+          <button class="nav-link" id="academic-tab" type="button" data-testid="button-filter-academic">
             <i class="bi bi-book me-2"></i>Academic
           </button>
         </li>
-        <li class="nav-item" role="presentation">
-          <button class="nav-link" id="admin-tab" data-bs-toggle="pill" data-bs-target="#admin" type="button" role="tab" data-testid="button-filter-admin">
+        <li class="nav-item">
+          <button class="nav-link" id="admin-tab" type="button" data-testid="button-filter-admin">
             <i class="bi bi-speedometer2 me-2"></i>Administration
           </button>
         </li>
-        <li class="nav-item" role="presentation">
-          <button class="nav-link" id="finance-tab" data-bs-toggle="pill" data-bs-target="#finance" type="button" role="tab" data-testid="button-filter-finance">
+        <li class="nav-item">
+          <button class="nav-link" id="finance-tab" type="button" data-testid="button-filter-finance">
             <i class="bi bi-currency-dollar me-2"></i>Finance
           </button>
         </li>
-        <li class="nav-item" role="presentation">
-          <button class="nav-link" id="communication-tab" data-bs-toggle="pill" data-bs-target="#communication" type="button" role="tab" data-testid="button-filter-communication">
+        <li class="nav-item">
+          <button class="nav-link" id="communication-tab" type="button" data-testid="button-filter-communication">
             <i class="bi bi-chat-dots me-2"></i>Communication
           </button>
         </li>
       </ul>
       
-      <div class="tab-content" id="categoryTabsContent">
-        <!-- All Modules Tab -->
-        <div class="tab-pane fade show active" id="all" role="tabpanel">
-          <div id="modules-grid" class="row g-4">
+      <div id="modules-grid" class="row g-4">
             <!-- Academic Modules -->
             <div class="col-12">
               <h4 class="fw-bold text-primary mb-4" data-testid="text-section-academic">
@@ -364,6 +358,44 @@
               </div>
             </div>
 
+            <div class="col-lg-4 col-md-6">
+              <div class="module-card-advanced" data-category="admin" data-testid="card-module-events">
+                <div class="module-card-header">
+                  <div class="module-icon-advanced bg-gradient-primary">
+                    <i class="bi bi-calendar-event"></i>
+                  </div>
+                </div>
+                <div class="module-card-body">
+                  <h4>Events Management</h4>
+                  <p>Plan and manage school events, competitions, and extracurricular activities.</p>
+                  <ul class="module-features">
+                    <li><i class="bi bi-check-circle-fill text-success"></i> Event Planning</li>
+                    <li><i class="bi bi-check-circle-fill text-success"></i> Registration & RSVP</li>
+                    <li><i class="bi bi-check-circle-fill text-success"></i> Calendar Integration</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="module-card-advanced" data-category="admin" data-testid="card-module-cafeteria">
+                <div class="module-card-header">
+                  <div class="module-icon-advanced bg-gradient-secondary">
+                    <i class="bi bi-cup-hot"></i>
+                  </div>
+                </div>
+                <div class="module-card-body">
+                  <h4>Cafeteria Management</h4>
+                  <p>Manage meal plans, menu scheduling, and cafeteria billing efficiently.</p>
+                  <ul class="module-features">
+                    <li><i class="bi bi-check-circle-fill text-success"></i> Menu Planning</li>
+                    <li><i class="bi bi-check-circle-fill text-success"></i> Meal Tracking</li>
+                    <li><i class="bi bi-check-circle-fill text-success"></i> Billing Integration</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+
             <!-- Finance Modules -->
             <div class="col-12 mt-5">
               <h4 class="fw-bold text-primary mb-4" data-testid="text-section-finance">
@@ -405,6 +437,25 @@
                     <li><i class="bi bi-check-circle-fill text-success"></i> Ledger Management</li>
                     <li><i class="bi bi-check-circle-fill text-success"></i> Income-Expense Tracking</li>
                     <li><i class="bi bi-check-circle-fill text-success"></i> Financial Reports</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="module-card-advanced" data-category="finance" data-testid="card-module-expense">
+                <div class="module-card-header">
+                  <div class="module-icon-advanced bg-gradient-warning">
+                    <i class="bi bi-wallet2"></i>
+                  </div>
+                </div>
+                <div class="module-card-body">
+                  <h4>Expense Management</h4>
+                  <p>Track and control school expenses with approval workflows and budget management.</p>
+                  <ul class="module-features">
+                    <li><i class="bi bi-check-circle-fill text-success"></i> Expense Tracking</li>
+                    <li><i class="bi bi-check-circle-fill text-success"></i> Budget Control</li>
+                    <li><i class="bi bi-check-circle-fill text-success"></i> Approval Workflows</li>
                   </ul>
                 </div>
               </div>
@@ -495,8 +546,44 @@
                 </div>
               </div>
             </div>
-          </div>
-        </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="module-card-advanced" data-category="communication" data-testid="card-module-newsletter">
+                <div class="module-card-header">
+                  <div class="module-icon-advanced bg-gradient-success">
+                    <i class="bi bi-envelope-paper"></i>
+                  </div>
+                </div>
+                <div class="module-card-body">
+                  <h4>Newsletter System</h4>
+                  <p>Create and distribute newsletters to parents, staff, and students with ease.</p>
+                  <ul class="module-features">
+                    <li><i class="bi bi-check-circle-fill text-success"></i> Email Templates</li>
+                    <li><i class="bi bi-check-circle-fill text-success"></i> Scheduled Sending</li>
+                    <li><i class="bi bi-check-circle-fill text-success"></i> Analytics</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="module-card-advanced" data-category="communication" data-testid="card-module-alumni">
+                <div class="module-card-header">
+                  <div class="module-icon-advanced bg-gradient-danger">
+                    <i class="bi bi-people-fill"></i>
+                  </div>
+                </div>
+                <div class="module-card-body">
+                  <h4>Alumni Network</h4>
+                  <p>Connect with alumni, track achievements, and manage alumni engagement programs.</p>
+                  <ul class="module-features">
+                    <li><i class="bi bi-check-circle-fill text-success"></i> Alumni Directory</li>
+                    <li><i class="bi bi-check-circle-fill text-success"></i> Event Management</li>
+                    <li><i class="bi bi-check-circle-fill text-success"></i> Donation Tracking</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
       </div>
     </div>
   </section>
