--- a/pages/modules.html
+++ b/pages/modules.html
@@ -21,7 +21,7 @@
   <nav class="navbar navbar-expand-lg navbar-light sticky-top">
     <div class="container">
       <a class="navbar-brand" href="../index.html" data-testid="link-home">
-        <i class="bi bi-mortarboard-fill"></i> Acadify Solution
+        <img src="https://acadifysolution.com/assets/img/logo.png" alt="Acadify Solution" height="30">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" data-testid="button-menu-toggle">
         <span class="navbar-toggler-icon"></span>
@@ -41,7 +41,7 @@
             <a class="nav-link" href="contact.html" data-testid="link-nav-contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="btn btn-primary ms-3" href="demo.html" data-testid="button-demo">Request a Demo</a>
+            <a class="btn btn-primary ms-3" href="https://calendly.com/acadify-online/30min" target="_blank" data-testid="button-demo">Request a Demo</a>
           </li>
         </ul>
       </div>
@@ -73,7 +73,7 @@
             <a href="#modules-grid" class="btn btn-primary btn-lg" data-testid="button-explore">
               <i class="bi bi-arrow-down-circle me-2"></i>Explore Modules
             </a>
-            <a href="demo.html" class="btn btn-outline-primary btn-lg" data-testid="button-demo-hero">
+            <a href="https://calendly.com/acadify-online/30min" target="_blank" class="btn btn-outline-primary btn-lg" data-testid="button-demo-hero">
               <i class="bi bi-play-circle me-2"></i>Watch Demo
             </a>
           </div>
@@ -650,7 +650,7 @@
           <p class="lead mb-0" data-testid="text-cta-subtitle">Schedule a personalized demo to see how our modules work together</p>
         </div>
         <div class="col-lg-4 text-center text-lg-end">
-          <a href="demo.html" class="btn btn-light btn-lg" data-testid="button-cta-demo">
+          <a href="https://calendly.com/acadify-online/30min" target="_blank" class="btn btn-light btn-lg" data-testid="button-cta-demo">
             <i class="bi bi-calendar-check me-2"></i>Book Free Demo
           </a>
         </div>
@@ -678,14 +678,14 @@
           <ul>
             <li><a href="modules.html" data-testid="link-footer-modules">All Modules</a></li>
             <li><a href="pricing.html" data-testid="link-footer-pricing">Pricing</a></li>
-            <li><a href="demo.html" data-testid="link-footer-demo">Request Demo</a></li>
+            <li><a href="https://calendly.com/acadify-online/30min" target="_blank" data-testid="link-footer-demo">Request Demo</a></li>
           </ul>
         </div>
         
         <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
           <h5>Company</h5>
           <ul>
-            <li><a href="about.html" data-testid="link-footer-about">About Us</a></li>
+            
             <li><a href="blog.html" data-testid="link-footer-blog">Blog</a></li>
             <li><a href="contact.html" data-testid="link-footer-contact">Contact</a></li>
           </ul>
