--- a/pages/case-studies.html
+++ b/pages/case-studies.html
@@ -16,7 +16,9 @@
 <body>
     <nav class="navbar">
         <div class="container">
-            <a href="../index.html" class="navbar-brand">Acadify School ERP</a>
+            <a href="../index.html" class="navbar-brand">
+                <img src="https://acadifysolution.com/assets/img/logo.png" alt="Acadify Solution" height="30">
+            </a>
             <div class="mobile-toggle">
                 <span></span>
                 <span></span>
@@ -24,14 +26,10 @@
             </div>
             <ul class="navbar-menu">
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="features.html">Features</a></li>
                 <li><a href="modules.html">Modules</a></li>
                 <li><a href="pricing.html">Pricing</a></li>
-                <li><a href="mobile-apps.html">Mobile Apps</a></li>
-                <li><a href="why-acadify.html">Why Acadify</a></li>
-                
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="demo.html" class="btn btn-primary">Request Demo</a></li>
+                <li><a href="https://calendly.com/acadify-online/30min" target="_blank" class="btn btn-primary">Request Demo</a></li>
             </ul>
         </div>
     </nav>
@@ -160,7 +158,7 @@
             <h2>Ready to Write Your Success Story?</h2>
             <p>Join 125+ schools transforming education with Acadify</p>
             <div class="cta-buttons">
-                <a href="demo.html" class="btn btn-white btn-lg">Request Free Demo</a>
+                <a href="https://calendly.com/acadify-online/30min" target="_blank" class="btn btn-white btn-lg">Request Free Demo</a>
             </div>
         </div>
     </section>
@@ -176,20 +174,18 @@
                     <h4>Quick Links</h4>
                     <ul>
                         <li><a href="../index.html">Home</a></li>
-                        <li><a href="features.html">Features</a></li>
+                        <li><a href="modules.html">Modules</a></li>
                         <li><a href="pricing.html">Pricing</a></li>
-                        <li><a href="about.html">About Us</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div>
-                    <h4>Solutions</h4>
+                    <h4>Resources</h4>
                     <ul>
-                        <li><a href="modules.html">Modules</a></li>
-                        <li><a href="mobile-apps.html">Mobile Apps</a></li>
-                        <li><a href="reports.html">Reports</a></li>
                         <li><a href="case-studies.html">Case Studies</a></li>
                         <li><a href="faq.html">FAQ</a></li>
+                        <li><a href="privacy.html">Privacy Policy</a></li>
+                        <li><a href="terms.html">Terms of Service</a></li>
                     </ul>
                 </div>
                 <div>
