--- a/index.html
+++ b/index.html
@@ -3,8 +3,52 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Acadify Solution | The All-in-One School ERP Software</title>
-  <meta name="description" content="Streamline your school's operations with Acadify Solution. Our powerful ERP software manages admissions, fees, attendance, and communication effortlessly.">
+  <title>Best School ERP Software in India | School Management System - Acadify Solution</title>
+  <meta name="description" content="Leading School ERP Software in India. Manage admissions, fees, attendance, exams & communication for schools across Delhi, Mumbai, Gujarat. Trusted by 500+ institutions. Free Demo Available.">
+  <meta name="keywords" content="school erp software india, school management system, school erp in india, best school management software, school administration software, education erp india, school fee management, student management system, school software india, erp for schools">
+  <meta name="author" content="Acadify Solution">
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+  <link rel="canonical" href="https://school.acadifysolution.com/">
+  
+  <!-- Open Graph Meta Tags for Social Media -->
+  <meta property="og:locale" content="en_US">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Best School ERP Software in India | Acadify Solution">
+  <meta property="og:description" content="India's #1 School Management System. Streamline admissions, fees, attendance & exams. Trusted by 500+ schools. Free Demo Available.">
+  <meta property="og:url" content="https://school.acadifysolution.com/">
+  <meta property="og:site_name" content="Acadify Solution - School ERP">
+  <meta property="og:image" content="https://acadifysolution.com/assets/img/logo.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:alt" content="Acadify Solution School ERP Software Logo">
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Best School ERP Software in India | Acadify Solution">
+  <meta name="twitter:description" content="India's #1 School Management System. Streamline admissions, fees, attendance & exams. Trusted by 500+ schools.">
+  <meta name="twitter:image" content="https://acadifysolution.com/assets/img/logo.png">
+  <meta name="twitter:site" content="@acadifysolution">
+  <meta name="twitter:creator" content="@acadifysolution">
+  
+  <!-- Geographic Meta Tags -->
+  <meta name="geo.region" content="IN">
+  <meta name="geo.placename" content="India">
+  <meta name="geo.position" content="22.3072;73.1812">
+  <meta name="ICBM" content="22.3072, 73.1812">
+  
+  <!-- Advanced SEO Meta Tags -->
+  <meta name="theme-color" content="#0d6efd">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="format-detection" content="telephone=yes">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="referrer" content="no-referrer-when-downgrade">
+  
+  <!-- Preconnect for Performance -->
+  <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+  <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
+  <link rel="dns-prefetch" href="https://fonts.googleapis.com">
   
   <!-- Bootstrap 5.3 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -19,7 +63,11 @@
   <nav class="navbar navbar-expand-lg navbar-light sticky-top">
     <div class="container">
       <a class="navbar-brand" href="index.html" data-testid="link-home">
-        <img src="https://acadifysolution.com/assets/img/logo.png" alt="Acadify Solution" height="30">
+        <img src="https://acadifysolution.com/assets/img/logo.png" 
+            alt="Acadify Solution" 
+            height="40" 
+            width="140"
+            style="object-fit: contain;">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" data-testid="button-menu-toggle">
         <span class="navbar-toggler-icon"></span>
@@ -101,27 +149,27 @@
         <div class="col-lg-6">
           <div class="modules-hero-visual">
             <div class="floating-card floating-card-1" data-testid="floating-card-1">
-              <i class="bi bi-graph-up-arrow text-success"></i>
-              <div>
-                <div class="small text-black">Efficiency Boost</div>
-                <div class="fw-bold text-black">+40%</div>
-              </div>
+              <i class="bi bi-graph-up-arrow" style="color:#000 !important;"></i>
+                <div>
+                  <div class="small" style="color:#000 !important;">Efficiency Boost</div>
+                  <div class="fw-bold" style="color:#000 !important;">+40%</div>
+                </div>
             </div>
             <div class="floating-card floating-card-2" data-testid="floating-card-2">
-              <i class="bi bi-people-fill text-primary"></i>
-              <div>
-                <div class="small text-black">Active Users</div>
-                <div class="fw-bold text-black">2M+</div>
-              </div>
+              <i class="bi bi-people-fill" style="color:#000 !important;"></i>
+                <div>
+                  <div class="small" style="color:#000 !important;">Active Users</div>
+                  <div class="fw-bold" style="color:#000 !important;">2M+</div>
+                </div>
             </div>
             <div class="floating-card floating-card-3" data-testid="floating-card-3">
-              <i class="bi bi-star-fill text-warning"></i>
-              <div>
-                <div class="small text-black">Rating</div>
-                <div class="fw-bold text-black">4.9/5</div>
-              </div>
+              <i class="bi bi-star-fill" style="color:#000 !important;"></i>
+                <div>
+                  <div class="small" style="color:#000 !important;">Rating</div>
+                  <div class="fw-bold" style="color:#000 !important;">4.9/5</div>
+                </div>
             </div>
-            <img src="images/hero-dashboard.jpg" alt="Acadify Solution Dashboard" class="img-fluid rounded-4 shadow-lg" data-testid="img-hero-dashboard">
+            <img src="images/Home - Hero Section.png" alt="Acadify Solution Dashboard" class="img-fluid rounded-4 shadow-lg" data-testid="img-hero-dashboard">
           </div>
         </div>
       </div>
@@ -255,7 +303,7 @@
         <div class="col-lg-6 mb-4 mb-lg-0">
           <div class="position-relative">
             <div class="why-acadify-image-bg"></div>
-            <img src="images/why-acadify.jpg" alt="Why Choose Acadify" class="img-fluid rounded-4 shadow-lg position-relative" data-testid="img-why-acadify">
+            <img src="images/Why Choose Acadify Solution.png" alt="Why Choose Acadify" class="img-fluid rounded-4 shadow-lg position-relative" data-testid="img-why-acadify">
             
             <div class="achievement-badge achievement-badge-1" data-testid="badge-achievement-1">
               <div class="icon-wrapper bg-success">
@@ -419,7 +467,7 @@
           <div class="row align-items-center g-4">
             <div class="col-lg-7">
               <div class="platform-image-wrapper">
-                <img src="images/admin-dashboard.jpg" alt="Admin Dashboard" class="img-fluid rounded-4 shadow-lg" data-testid="img-admin-dashboard">
+                <img src="images/Powerful Admin Dashboard.png" alt="Admin Dashboard" class="img-fluid rounded-4 shadow-lg" data-testid="img-admin-dashboard">
               </div>
             </div>
             <div class="col-lg-5">
@@ -482,7 +530,7 @@
           <div class="row align-items-center g-4">
             <div class="col-lg-7">
               <div class="platform-image-wrapper">
-                <img src="images/teacher-portal.jpg" alt="Teacher Portal" class="img-fluid rounded-4 shadow-lg" data-testid="img-teacher-portal">
+                <img src="images/Streamlined Teacher Portal.png" alt="Teacher Portal" class="img-fluid rounded-4 shadow-lg" data-testid="img-teacher-portal">
               </div>
             </div>
             <div class="col-lg-5">
@@ -545,7 +593,7 @@
           <div class="row align-items-center g-4">
             <div class="col-lg-7">
               <div class="platform-image-wrapper">
-                <img src="images/parent-app.jpg" alt="Parent Mobile App" class="img-fluid rounded-4 shadow-lg" data-testid="img-parent-app">
+                <img src="images/Connected Parent App.png" alt="Parent Mobile App" class="img-fluid rounded-4 shadow-lg" data-testid="img-parent-app">
               </div>
             </div>
             <div class="col-lg-5">
@@ -618,7 +666,7 @@
           <div class="row align-items-center g-4">
             <div class="col-lg-7">
               <div class="platform-image-wrapper">
-                <img src="images/student-portal.jpg" alt="Student Portal" class="img-fluid rounded-4 shadow-lg" data-testid="img-student-portal">
+                <img src="images/Interactive Student Portal.png" alt="Student Portal" class="img-fluid rounded-4 shadow-lg" data-testid="img-student-portal">
               </div>
             </div>
             <div class="col-lg-5">
@@ -953,6 +1001,234 @@
 
   <!-- Footer -->
   <div id="footer-placeholder"></div>
+
+  <!-- Structured Data - Organization Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Acadify Solution",
+    "alternateName": "Acadify School ERP",
+    "url": "https://school.acadifysolution.com",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://acadifysolution.com/assets/img/logo.png",
+      "width": "140",
+      "height": "40"
+    },
+    "description": "Leading School ERP Software in India. Complete school management system for admissions, fees, attendance, and communication.",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Vadodara",
+      "addressRegion": "Gujarat",
+      "addressCountry": "IN"
+    },
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "telephone": "+91-7015097673",
+      "contactType": "Customer Service",
+      "areaServed": "IN",
+      "availableLanguage": ["English", "Hindi"],
+      "email": "info@acadify.com"
+    },
+    "sameAs": [
+      "https://www.facebook.com/acadifysolution",
+      "https://www.linkedin.com/company/acadifysolution",
+      "https://twitter.com/acadifysolution"
+    ],
+    "founder": {
+      "@type": "Organization",
+      "name": "Acadify Solution"
+    },
+    "foundingDate": "2020",
+    "numberOfEmployees": {
+      "@type": "QuantitativeValue",
+      "value": "50"
+    }
+  }
+  </script>
+  
+  <!-- Structured Data - Software Product Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Acadify School ERP",
+    "applicationCategory": "BusinessApplication",
+    "operatingSystem": "Web, Android, iOS",
+    "description": "Comprehensive school management ERP software for Indian educational institutions. Manage admissions, fees, attendance, exams, HR, and more.",
+    "offers": {
+      "@type": "Offer",
+      "price": "990",
+      "priceCurrency": "INR",
+      "priceValidUntil": "2025-12-31"
+    },
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "4.9",
+      "ratingCount": "500",
+      "bestRating": "5",
+      "worstRating": "1"
+    },
+    "provider": {
+      "@type": "Organization",
+      "name": "Acadify Solution"
+    }
+  }
+  </script>
+  
+  <!-- Structured Data - Breadcrumb Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [{
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://school.acadifysolution.com/"
+    }]
+  }
+  </script>
+  
+  <!-- Structured Data - FAQ Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "What is Acadify School ERP?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Acadify is a comprehensive cloud-based school management ERP software designed for Indian educational institutions. It manages admissions, fees, attendance, exams, transport, library, HR, and communication - all from one platform. Trusted by 500+ schools across India."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How much does school ERP software cost in India?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Acadify School ERP pricing starts at ₹990/month for up to 200 students. We offer flexible plans based on your school size with transparent pricing and no hidden costs. All plans include free training, support, and mobile apps for parents and teachers."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is Acadify suitable for CBSE and ICSE schools?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, Acadify is fully compliant with CBSE, ICSE, and State Board requirements. Our exam management module supports board-specific grading systems, report cards, and academic calendars."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does Acadify have a parent mobile app?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, Acadify includes free mobile apps for both Android and iOS. Parents can track attendance, view exam results, pay fees online, communicate with teachers, and receive real-time notifications about their child's progress."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How long does implementation take?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Most schools are up and running within 1-2 weeks. Our team handles data migration, setup, and comprehensive staff training to ensure a smooth transition. We provide ongoing support to help you succeed."
+        }
+      }
+    ]
+  }
+  </script>
+  
+  <!-- Structured Data - Local Business Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Acadify Solution - School ERP Software",
+    "image": "https://acadifysolution.com/assets/img/logo.png",
+    "@id": "https://school.acadifysolution.com",
+    "url": "https://school.acadifysolution.com",
+    "telephone": "+91-7015097673",
+    "priceRange": "₹₹",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Vadodara",
+      "addressLocality": "Vadodara",
+      "addressRegion": "Gujarat",
+      "postalCode": "390001",
+      "addressCountry": "IN"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": 22.3072,
+      "longitude": 73.1812
+    },
+    "openingHoursSpecification": {
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": [
+        "Monday",
+        "Tuesday",
+        "Wednesday",
+        "Thursday",
+        "Friday",
+        "Saturday"
+      ],
+      "opens": "09:00",
+      "closes": "18:00"
+    },
+    "areaServed": [
+      {
+        "@type": "City",
+        "name": "Delhi"
+      },
+      {
+        "@type": "City",
+        "name": "Mumbai"
+      },
+      {
+        "@type": "City",
+        "name": "Bangalore"
+      },
+      {
+        "@type": "State",
+        "name": "Gujarat"
+      },
+      {
+        "@type": "Country",
+        "name": "India"
+      }
+    ],
+    "hasOfferCatalog": {
+      "@type": "OfferCatalog",
+      "name": "School ERP Services",
+      "itemListElement": [
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "School Fee Management Software"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Student Attendance System"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Transport GPS Tracking"
+          }
+        }
+      ]
+    }
+  }
+  </script>
 
   <!-- Bootstrap 5.3 JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
