--- a/pages/case-studies.html
+++ b/pages/case-studies.html
@@ -16,9 +16,13 @@
 <body>
     <nav class="navbar">
         <div class="container">
-            <a href="../index.html" class="navbar-brand">
-                <img src="https://acadifysolution.com/assets/img/logo.png" alt="Acadify Solution" height="30">
-            </a>
+      <a class="navbar-brand" href="index.html" data-testid="link-home">
+        <img src="https://acadifysolution.com/assets/img/logo.png" 
+            alt="Acadify Solution" 
+            height="40" 
+            width="140"
+            style="object-fit: contain;">
+      </a>
             <div class="mobile-toggle">
                 <span></span>
                 <span></span>
