--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,8 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Us | Get in Touch with Acadify Solution</title>
-  <meta name="description" content="Have questions? Contact the Acadify Solution team for support, sales inquiries, or to schedule a demo of our school ERP software.">
+  <title>Contact Us | School ERP Support India - Acadify Solution</title>
+  <meta name="description" content="Contact Acadify Solution for school ERP support, sales inquiries, or free demo. Serving schools across Delhi, Mumbai, Gujarat. Call +91-7015097673 or schedule a demo.">
+  <meta name="keywords" content="school erp support india, school software contact, erp demo request, school management software support">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://school.acadifysolution.com/pages/contact.html">
+  <meta property="og:title" content="Contact Us | School ERP Support India">
+  <meta property="og:description" content="Contact Acadify Solution for school ERP support. Serving schools across Delhi, Mumbai, Gujarat. Call +91-7015097673">
+  <meta property="og:url" content="https://school.acadifysolution.com/pages/contact.html">
+  <meta property="og:type" content="website">
   
   <!-- Bootstrap 5.3 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -20,8 +27,12 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light sticky-top">
     <div class="container">
-      <a class="navbar-brand" href="../index.html" data-testid="link-home">
-        <img src="https://acadifysolution.com/assets/img/logo.png" alt="Acadify Solution" height="30">
+      <a class="navbar-brand" href="index.html" data-testid="link-home">
+        <img src="https://acadifysolution.com/assets/img/logo.png" 
+            alt="Acadify Solution" 
+            height="40" 
+            width="140"
+            style="object-fit: contain;">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" data-testid="button-menu-toggle">
         <span class="navbar-toggler-icon"></span>
@@ -57,7 +68,7 @@
     </div>
     
     <div class="container py-5 position-relative text-center">
-      <span class="badge bg-white bg-opacity-20 text-white px-3 py-2 rounded-pill mb-3 border border-white" data-testid="badge-contact">
+      <span class="badge bg-black bg-opacity-20 text-white px-3 py-2 rounded-pill mb-3 border border-white" data-testid="badge-contact">
         <i class="bi bi-chat-dots me-2"></i>Get in Touch
       </span>
       <h1 class="display-3 fw-bold mb-4 text-white" data-testid="text-hero-title">
@@ -203,44 +214,6 @@
               </a>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Map Section -->
-  <section class="section bg-light-custom">
-    <div class="container">
-      <div class="text-center mb-4">
-        <span class="badge bg-primary bg-opacity-10 text-primary px-3 py-2 rounded-pill mb-3">Visit Us</span>
-        <h2 class="display-5 fw-bold mb-3">Find Us on the Map</h2>
-        <p class="lead text-muted">Located in the heart of San Francisco</p>
-      </div>
-      
-      <div class="map-wrapper">
-        <iframe 
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.0977893793464!2d-122.39494668468145!3d37.79184797975769!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085807c1e5b1c63%3A0x2a7e2b02e9f6d0a3!2sSan%20Francisco%2C%20CA%2094105!5e0!3m2!1sen!2sus!4v1234567890123!5m2!1sen!2sus" 
-          style="border:0; border-radius: 20px; width: 100%; height: 450px;" 
-          allowfullscreen="" 
-          loading="lazy"
-          data-testid="map-embed">
-        </iframe>
-      </div>
-    </div>
-  </section>
-
-  <!-- CTA Section -->
-  <section class="cta-section">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-8 text-center text-lg-start mb-4 mb-lg-0">
-          <h2 data-testid="text-cta-title">Prefer a Live Demo?</h2>
-          <p class="lead mb-0" data-testid="text-cta-subtitle">See Acadify Solution in action with a personalized demonstration</p>
-        </div>
-        <div class="col-lg-4 text-center text-lg-end">
-          <a href="https://calendly.com/acadify-online/30min" target="_blank" class="btn btn-light btn-lg" data-testid="button-cta-demo">
-            <i class="bi bi-play-circle me-2"></i>Schedule a Demo
-          </a>
         </div>
       </div>
     </div>
