--- a/pages/modules.html
+++ b/pages/modules.html
@@ -3,8 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Our ERP Modules & Features | Acadify Solution</title>
-  <meta name="description" content="Explore the comprehensive modules of Acadify Solution, including admission, timetable, examination, HR, and transport management.">
+  <title>School ERP Modules & Features India | Fee, Attendance, Transport Management</title>
+  <meta name="description" content="16+ powerful modules for Indian schools: Fee Management, Student Attendance, Online Admission, Transport GPS Tracking, Exam Management, Parent Mobile App & more. CBSE/ICSE compliant.">
+  <meta name="keywords" content="school fee management software, student attendance system, transport tracking system, admission management, exam management software, library management system, school erp modules">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://school.acadifysolution.com/pages/modules.html">
+  <meta property="og:title" content="School ERP Modules & Features India | Acadify Solution">
+  <meta property="og:description" content="16+ powerful modules for Indian schools: Fee Management, Attendance, Transport GPS, Exam Management & more.">
+  <meta property="og:url" content="https://school.acadifysolution.com/pages/modules.html">
+  <meta property="og:type" content="website">
   
   <!-- Bootstrap 5.3 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -20,8 +27,12 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light sticky-top">
     <div class="container">
-      <a class="navbar-brand" href="../index.html" data-testid="link-home">
-        <img src="https://acadifysolution.com/assets/img/logo.png" alt="Acadify Solution" height="30">
+      <a class="navbar-brand" href="index.html" data-testid="link-home">
+        <img src="https://acadifysolution.com/assets/img/logo.png" 
+            alt="Acadify Solution" 
+            height="40" 
+            width="140"
+            style="object-fit: contain;">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" data-testid="button-menu-toggle">
         <span class="navbar-toggler-icon"></span>
@@ -103,7 +114,7 @@
         
         <div class="col-lg-6">
           <div class="modules-hero-visual">
-            <img src="../images/admin-dashboard.jpg" alt="Acadify Modules Dashboard" class="img-fluid rounded-4 shadow-lg" data-testid="img-hero">
+            <img src="../images/Home - Hero Section.png" alt="Acadify Modules Dashboard" class="img-fluid rounded-4 shadow-lg" data-testid="img-hero">
           </div>
         </div>
       </div>
