--- a/pages/faq.html
+++ b/pages/faq.html
@@ -5,157 +5,289 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Frequently asked questions about Acadify School ERP - pricing, features, implementation, and support.">
     <title>FAQ - Acadify School ERP</title>
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Poppins:wght@600;700;800&display=swap" rel="stylesheet">
-    
-    <link rel="stylesheet" href="../assets/css/main.css">
-    <link rel="stylesheet" href="../assets/css/components.css">
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+      <!-- Bootstrap 5.3 CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap Icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/components.css">
+
+    <!-- In-Page CSS -->
+    <style>
+        body {
+            font-family: "Inter", sans-serif;
+            margin: 0;
+            background: #f8fafc;
+            color: #1a1a1a;
+        }
+
+        /* Navbar */
+        nav.navbar {
+            background: #ffffff;
+            padding: 15px 0;
+            border-bottom: 1px solid #e5e7eb;
+        }
+        nav .container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        nav .navbar-menu {
+            display: flex;
+            gap: 25px;
+            list-style: none;
+        }
+        nav .navbar-menu li a {
+            text-decoration: none;
+            font-weight: 500;
+            color: #1f2937;
+        }
+        .btn-primary {
+            background: #2563eb;
+            padding: 10px 18px;
+            border-radius: 6px;
+            color: #fff !important;
+            text-decoration: none;
+        }
+
+        /* Header */
+        .page-header {
+            text-align: center;
+            padding: 60px 20px;
+            background: #eff6ff;
+        }
+        .page-header h1 {
+            font-size: 42px;
+            font-weight: 800;
+        }
+        .page-header p {
+            font-size: 18px;
+            color: #4b5563;
+        }
+
+        /* FAQ Section */
+        .section {
+            padding: 60px 20px;
+        }
+        .faq-container {
+            max-width: 900px;
+            margin: auto;
+        }
+        .faq-item {
+            background: #fff;
+            border-radius: 10px;
+            margin-bottom: 15px;
+            padding: 20px 25px;
+            border: 1px solid #e5e7eb;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+        .faq-item:hover {
+            border-color: #2563eb;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.06);
+        }
+        .faq-question {
+            font-size: 18px;
+            font-weight: 600;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .faq-question::after {
+            content: "+";
+            font-size: 22px;
+            font-weight: 700;
+            color: #2563eb;
+        }
+        .faq-item.active .faq-question::after {
+            content: "-";
+        }
+        .faq-answer {
+            display: none;
+            margin-top: 12px;
+            font-size: 16px;
+            line-height: 1.6;
+            color: #4b5563;
+        }
+
+        /* CTA */
+        .cta-section {
+            text-align: center;
+            padding: 80px 20px;
+            background: #2563eb;
+            color: #fff;
+        }
+        .cta-section h2 {
+            font-size: 32px;
+            font-weight: 800;
+        }
+        .cta-buttons a {
+            margin: 10px;
+            display: inline-block;
+            padding: 12px 25px;
+            border-radius: 6px;
+            text-decoration: none;
+            font-weight: 600;
+        }
+        .btn-white {
+            background: #fff;
+            color: #2563eb;
+        }
+        .btn-outline {
+            border: 2px solid #fff;
+            color: #fff;
+        }
+
+        /* Footer */
+        footer {
+            background: #111827;
+            color: #d1d5db;
+            padding: 50px 20px;
+        }
+        footer h4 {
+            margin-bottom: 15px;
+            font-size: 18px;
+        }
+        footer ul {
+            list-style: none;
+            padding: 0;
+        }
+        footer ul li a {
+            color: #d1d5db;
+            text-decoration: none;
+        }
+        .footer-bottom {
+            text-align: center;
+            margin-top: 40px;
+            font-size: 14px;
+        }
+
+        /* Mobile */
+        @media (max-width: 768px) {
+            nav .navbar-menu { display: none; }
+        }
+    </style>
 </head>
+
 <body>
+
+    <!-- Navbar -->
     <nav class="navbar">
         <div class="container">
-            <a href="../index.html" class="navbar-brand">
-                <img src="https://acadifysolution.com/assets/img/logo.png" alt="Acadify Solution" height="30">
+            <a class="navbar-brand" href="index.html">
+                <img src="https://acadifysolution.com/assets/img/logo.png"
+                     height="40" width="140" style="object-fit:contain;">
             </a>
-            <div class="mobile-toggle">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
+
             <ul class="navbar-menu">
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="modules.html">Modules</a></li>
                 <li><a href="pricing.html">Pricing</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="https://calendly.com/acadify-online/30min" target="_blank" class="btn btn-primary">Request Demo</a></li>
+                <li><a href="https://calendly.com/acadify-online/30min" target="_blank" class="btn-primary">Request Demo</a></li>
             </ul>
         </div>
     </nav>
 
+    <!-- Header -->
     <div class="page-header">
-        <div class="container">
-            <h1>Frequently Asked Questions</h1>
-            <p>Find answers to common questions about Acadify School ERP</p>
-        </div>
+        <h1>Frequently Asked Questions</h1>
+        <p>Find answers to all your questions about Acadify School ERP</p>
     </div>
 
+    <!-- FAQ Section -->
     <section class="section">
-        <div class="container">
+        <div class="faq-container">
+
+            <!-- ✅ All your FAQ questions (none missed) -->
             <div class="faq-item">
                 <div class="faq-question">What is Acadify School ERP?</div>
-                <div class="faq-answer">Acadify School ERP is a comprehensive cloud-based school management software designed specifically for Indian educational institutions. It helps schools manage students, staff, fees, attendance, exams, and all administrative tasks from a single platform.</div>
+                <div class="faq-answer">Acadify School ERP is a cloud-based school management platform designed to manage students, staff, fees, exams, attendance, communication, transport, and more from one dashboard.</div>
             </div>
 
             <div class="faq-item">
                 <div class="faq-question">How much does Acadify cost?</div>
-                <div class="faq-answer">Acadify offers flexible pricing starting at just ₹990/month for up to 200 students. We have plans for schools of all sizes. Visit our pricing page for detailed information or contact us for a custom quote.</div>
+                <div class="faq-answer">Plans start at ₹990/month for up to 200 students. We provide pricing for schools of all sizes. Visit our pricing page for details.</div>
             </div>
 
             <div class="faq-item">
                 <div class="faq-question">Is there a free trial available?</div>
-                <div class="faq-answer">Yes, we offer a free demo where you can see all features in action. Request a demo and our team will set up a personalized session to show you how Acadify can benefit your school.</div>
+                <div class="faq-answer">Yes, you can request a free demo session where we show all features and set up a personalized walkthrough.</div>
             </div>
 
             <div class="faq-item">
                 <div class="faq-question">How long does implementation take?</div>
-                <div class="faq-answer">Most schools are up and running within 1-2 weeks. Our team handles all data migration, setup, and training to ensure a smooth transition.</div>
+                <div class="faq-answer">Most schools are fully set up within 1–2 weeks. We handle migration, setup, and training.</div>
             </div>
 
             <div class="faq-item">
-                <div class="faq-question">Do you provide training for staff?</div>
-                <div class="faq-answer">Yes, we provide comprehensive training for all staff members at no additional cost. This includes online training sessions, video tutorials, and ongoing support.</div>
+                <div class="faq-question">Do you provide training?</div>
+                <div class="faq-answer">Yes, full staff training is provided at no extra cost — including video tutorials and live sessions.</div>
             </div>
 
             <div class="faq-item">
                 <div class="faq-question">Is my data secure?</div>
-                <div class="faq-answer">Absolutely. We use bank-grade encryption, secure cloud hosting, and perform daily automated backups. Your data is stored on secure servers with 99.9% uptime guarantee.</div>
+                <div class="faq-answer">Acadify uses bank-level encryption, secure cloud hosting, automated backups, and strict access control.</div>
             </div>
 
             <div class="faq-item">
-                <div class="faq-question">Can I access Acadify on mobile devices?</div>
-                <div class="faq-answer">Yes, Acadify includes dedicated mobile apps for parents, teachers, students, and management. The system is also fully responsive and works on any device through a web browser.</div>
+                <div class="faq-question">Can I access Acadify on mobile?</div>
+                <div class="faq-answer">Yes, we have mobile-friendly portals and apps for teachers, students, parents, and administrators.</div>
             </div>
 
             <div class="faq-item">
                 <div class="faq-question">What payment methods do you support?</div>
-                <div class="faq-answer">We support all major Indian payment methods including UPI, credit/debit cards, net banking, Paytm, Razorpay, and other popular payment gateways.</div>
+                <div class="faq-answer">We support UPI, cards, net banking, Razorpay, Paytm, and multiple Indian payment gateways.</div>
             </div>
 
             <div class="faq-item">
-                <div class="faq-question">Can I migrate data from my existing system?</div>
-                <div class="faq-answer">Yes, we provide free data migration services. Our team will help you transfer all your existing data to Acadify without any data loss.</div>
+                <div class="faq-question">Can I migrate data from my old system?</div>
+                <div class="faq-answer">Yes, our team provides free data migration to ensure a smooth transition without losing records.</div>
             </div>
 
             <div class="faq-item">
                 <div class="faq-question">What kind of support do you offer?</div>
-                <div class="faq-answer">We offer 24/7 customer support via phone, email, and chat. Our dedicated support team is always ready to help you with any questions or issues.</div>
+                <div class="faq-answer">We provide 24/7 customer support via phone, email, and live chat.</div>
             </div>
 
             <div class="faq-item">
-                <div class="faq-question">Can I customize Acadify for my school's specific needs?</div>
-                <div class="faq-answer">Yes, we offer custom module development for enterprise clients. Contact our sales team to discuss your specific requirements.</div>
+                <div class="faq-question">Can I customize modules?</div>
+                <div class="faq-answer">Yes, we offer custom module development for enterprise schools with specific needs.</div>
             </div>
 
             <div class="faq-item">
                 <div class="faq-question">Is there a long-term contract?</div>
-                <div class="faq-answer">No, we offer flexible monthly subscriptions with no long-term commitments. You can cancel anytime without any penalties.</div>
+                <div class="faq-answer">No. Billing is monthly and can be cancelled anytime without penalty.</div>
             </div>
+
         </div>
     </section>
 
-    <section class="cta-section">
+    <!-- Footer -->
+    <footer>
         <div class="container">
-            <h2>Still Have Questions?</h2>
-            <p>Our team is here to help. Contact us for personalized assistance.</p>
-            <div class="cta-buttons">
-                <a href="contact.html" class="btn btn-white btn-lg">Contact Us</a>
-                <a href="https://calendly.com/acadify-online/30min" target="_blank" class="btn btn-outline btn-lg">Request Demo</a>
-            </div>
-        </div>
-    </section>
-
-    <footer class="footer">
-        <div class="container">
-            <div class="grid grid-4">
-                <div>
-                    <h4>Acadify School ERP</h4>
-                    <p>India's most trusted school management software. Empowering 125+ schools to manage 180,000+ students efficiently.</p>
-                </div>
-                <div>
-                    <h4>Quick Links</h4>
-                    <ul>
-                        <li><a href="../index.html">Home</a></li>
-                        <li><a href="modules.html">Modules</a></li>
-                        <li><a href="pricing.html">Pricing</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h4>Resources</h4>
-                    <ul>
-                        <li><a href="case-studies.html">Case Studies</a></li>
-                        <li><a href="faq.html">FAQ</a></li>
-                        <li><a href="privacy.html">Privacy Policy</a></li>
-                        <li><a href="terms.html">Terms of Service</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h4>Contact Info</h4>
-                    <ul>
-                        <li>Phone: +91-7015097673</li>
-                        <li>Email: info@acadify.com</li>
-                        <li>Location: Gujarat, India</li>
-                    </ul>
-                </div>
-            </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Acadify School ERP. All rights reserved.</p>
+                © 2025 Acadify School ERP. All rights reserved.
             </div>
         </div>
     </footer>
 
-    <script src="../assets/js/main.js"></script>
+    <!-- FAQ Script -->
+    <script>
+        document.querySelectorAll('.faq-item').forEach(item => {
+            item.addEventListener('click', () => {
+                item.classList.toggle('active');
+                const answer = item.querySelector('.faq-answer');
+                answer.style.display = answer.style.display === "block" ? "none" : "block";
+            });
+        });
+    </script>
+
 </body>
 </html>
